--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "NODE_ENV=development node ./server/index.js",
+    "prebuild": "trash './static/js/*.js' './static/css/*.css'",
     "build": "NODE_ENV=production node ./server/index.js"
   },
   "keywords": [],
@@ -35,6 +36,7 @@
     "raw-loader": "^0.5.1",
     "sass-loader": "^3.2.1",
     "style-loader": "^0.13.1",
+    "trash-cli": "^1.3.0",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.10.0",
