--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "html-loader": "^0.4.3",
     "mocha": "^2.5.3",
     "node-sass": "^3.8.0",
+    "null-loader": "^0.1.1",
     "postcss-loader": "^0.8.2",
     "raw-loader": "^0.5.1",
     "sass-loader": "^3.2.1",
