--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-jsx-a11y": "^1.5.3",
     "eslint-plugin-react": "^5.2.2",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "glob": "^7.0.5",
     "html-loader": "^0.4.3",
     "mocha": "^2.5.3",
@@ -38,6 +39,7 @@
     "sass-loader": "^3.2.1",
     "style-loader": "^0.13.1",
     "trash-cli": "^1.3.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.10.0",
