--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
+    "bootstrap-sass": "^3.3.6",
     "chai": "^3.5.0",
+    "commander": "^2.9.0",
     "css-loader": "^0.23.1",
     "eslint": "^2.13.1",
     "eslint-config-airbnb": "^9.0.1",
@@ -36,6 +38,7 @@
     "null-loader": "^0.1.1",
     "postcss-loader": "^0.8.2",
     "raw-loader": "^0.5.1",
+    "resolve-url-loader": "^1.4.4",
     "sass-loader": "^3.2.1",
     "style-loader": "^0.13.1",
     "trash-cli": "^1.3.0",
