--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "NODE_ENV=development node ./server/index.js",
-    "prebuild": "trash './static/js/*.js' './static/css/*.css'",
+    "prebuild": "trash './assetsMap.json'",
     "build": "NODE_ENV=production node ./server/index.js"
   },
   "keywords": [],
